intermediate revision - commiting the implemented though unneeded  "special_options" feature